2004-06-15 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b194

	* New: Added outOfDateAlbums to AlbumDB. 
	       It contains the names of all Albums that are out of Date.

	* Change: Dont show a "upgrade" link to every outdated album, 
		  instead add a bigger warning on mainpage.

2004-06-15  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b193

	* Change: PHP 5 changes, small optimization, additional security checks

2004-06-15 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b192

	* Change: Album Property Border-width from "off" to 0
	  - increased album and config version

	* Change: indention in
	  - html_wrap/slideshow.header.default
	  - layout/navtablebegin.inc
	  - layout/navtablemiddle.inc
	  - layout/navtableend.inc

	* Change: Slideshow low and high use the bordercolor and borderwidth defined in properties.

	* Fix: Border was not always correct in layout/breadcrumb.inc

2004-06-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b191

	* Change:  strcmp() to strcasecmp() due to PHP5 behavior of retaining
	  capitalization returned from un/serialize()

2004-06-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b190

	* Change:  Add a '10' option to "rows" in config wizard to match
	  the album properties page.  (Bug 970087)

2004-06-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b189

	* Change: Add set_time_limit() to init.php to cover situations
	  where we don't explicitly reset the timer.  If the user increases
	  the default timer, it will cover all of Gallery, not just the specific
	  points that we call it for.  By calling set_time_limit() for specific
	  processes, we just reset the timer so that things can take longer.

2004-06-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b188

	* Change: Minor optimization in Album->setHighlight()

	* Change: Extra checking in AlbumItem->setHighlight() to 
	  try and prevent issues with movies.  Upgrade/Movie error is
	  still unreproduceable.
